[package]
name = "freechains"
version = "0.1.0"
description = "Freechains client library for rust."
edition = "2018"
repository = "https://github.com/lrabbt/freechains-rs"
license = "MIT"
authors = [ "Breno Brandão <lrabbt@gmail.com>" ]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
